# Python_Studing_WEB

./: .gitignore  pyproject.toml
class_test/class_wor_9/lesson_1/: main.py  mempry  model.py  task_1.py
class_test/class_work_11/lesson_1/: db.py  main.py  req.py
class_test/class_work_12/lesson_1/: app.py  auth.py  db.py  sql_app.db  test.py
class_test/class_work_12/lesson_2/: main.py
class_test/class_work_7/EX-08/: create_db.py  salary.db
class_test/class_work_8/lesson_1/: connect.py  models.py  seeds.py  test_pymongo.py
class_test/class_work_8/lesson_2/: test.py
class_test/flask/: main.py
homework_10/: readme.md
homework_10/quotes_to_scrape/quotes/: models.py  urls.py  utils.py  views.py
homework_10/quotes_to_scrape/quotes_to_scrape/: settings.py  urls.py
homework_10/quotes_to_scrape/users/: forms.py  urls.py  views.py
homework_10/quotes_to_scrape/utils/: add_from_mongo_to_postgress.py  migrations.py  models.py
homework_11/: main.py
homework_11/migration/: env.py
homework_11/migration/versions/: b3c097f82e44_init.py
homework_11/src/: schemas.py
homework_11/src/database/: db.py  models.py
homework_11/src/repository/: contacts.py
homework_11/src/routes/: contacts.py
homework_12/: main.py  readme.md
homework_12/migration/versions/: 221bdb919309_init.py
homework_12/src/: schemas.py
homework_12/src/database/: models.py
homework_12/src/repository/: contacts.py  users.py
homework_12/src/routes/: auth.py  contacts.py
homework_12/src/services/: auth.py
homework_13/first_part/: main.py
homework_13/second_part/: readme.md
homework_14/: main.py  readme.md
homework_14/docs/: conf.py
homework_14/src/: schemas.py
homework_14/test/: conftest.py  test_routes_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
homework_3/: process.py  thread.py
homework_4/: Dockerfile  main.py  pyproject.toml
homework_4/storage/: data.json
homework_5/: console_bot_exchange.py  main.css  main.py
homework_6/: db_create.sql  fill.py  hw_6.db  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
homework_7/: CRUD.py  config.ini  db.py  main.py  my_select.py  result.json  seed.py  sql_model.py
homework_7/alembic/: env.py
homework_8/first_part/: authors.json  config.ini  find.py  quotes.json  seed.py
homework_8/part_2/: consumer.py  consumer_email.py  consumer_sms.py  models.py  producer.py  seed.py
homework_9/: authors.json  config.ini  main.py  models.py  quotes.json  seed.py
(+83 files in other folders)
