[tool.poetry]
name = "homework-4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "homework_4"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
